[gd_scene load_steps=9 format=3 uid="uid://dgkcvspfgjknc"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_dt06k"]
[ext_resource type="FontFile" uid="uid://bmjbakqrwlamn" path="res://fonts/NFS.ttf" id="1_fs1ta"]
[ext_resource type="AudioStream" uid="uid://t7qvdsp24aqo" path="res://Embient/emb.mp3" id="3_obr4u"]
[ext_resource type="AudioStream" uid="uid://6hjk0os35rew" path="res://Embient/eng.mp3" id="4_1ucib"]

[sub_resource type="Theme" id="Theme_vlorv"]
default_font = ExtResource("1_fs1ta")
default_font_size = 21

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ht86b"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.352941, 0.352941, 0.352941, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ltv6m"]
bg_color = Color(0.247059, 0.247059, 0.247059, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.352941, 0.352941, 0.352941, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dfgl6"]
bg_color = Color(0.180392, 0.180392, 0.180392, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.290196, 0.290196, 0.290196, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_vlorv")
script = ExtResource("1_dt06k")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="LabelName" type="Label" parent="ColorRect"]
layout_mode = 1
offset_left = 35.0
offset_top = 100.0
offset_right = 523.0
offset_bottom = 244.0
theme_override_fonts/font = ExtResource("1_fs1ta")
theme_override_font_sizes/font_size = 128
text = "Racing"

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 88.0
offset_top = -95.0
offset_right = 388.0
offset_bottom = 185.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StartButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer" groups=["menu_buttons"]]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fs1ta")
theme_override_styles/focus = SubResource("StyleBoxFlat_ht86b")
theme_override_styles/hover = SubResource("StyleBoxFlat_ltv6m")
theme_override_styles/normal = SubResource("StyleBoxFlat_dfgl6")
text = "Старт"

[node name="SettingsButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer" groups=["menu_buttons"]]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fs1ta")
theme_override_styles/focus = SubResource("StyleBoxFlat_ht86b")
theme_override_styles/hover = SubResource("StyleBoxFlat_ltv6m")
theme_override_styles/normal = SubResource("StyleBoxFlat_dfgl6")
text = "Настройки"

[node name="ExitButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer" groups=["menu_buttons"]]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fs1ta")
theme_override_styles/focus = SubResource("StyleBoxFlat_ht86b")
theme_override_styles/hover = SubResource("StyleBoxFlat_ltv6m")
theme_override_styles/normal = SubResource("StyleBoxFlat_dfgl6")
text = "Выход"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_obr4u")

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1ucib")

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
